Added images folder

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
         <!-- About me section -->
         <h1>About me</h1>
         <p>Hello! I'm Jessy Matta and I'm a graduate mathematics student and a software developer.</p>
-        <img width="210px" height="200px" src="./image_1.png"/>
+        <img width="210px" height="200px" src="images/image_1.png"/>
 
         <h1>List of projects</h1>
         <ul>
